fixed vh on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -117,6 +117,7 @@
 }
 .index .hero {
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 }
 .hero {
     height: 70vh;
